Fixed a bunch of small layout issues

--- a/css/index.css
+++ b/css/index.css
@@ -28,10 +28,10 @@ body {
 p {
   padding: 0;
   margin: 0 0 2em;
-  max-width: 32em;
+  max-width: 35em;
 }
 p.bump {
-  font-size: 1.6em;
+  font-size: 1.4em;
   line-height: 1.6em;
 }
 p.small {
@@ -210,7 +210,7 @@ ul:not([class]) li:before {
 }
 
 .pie-chart h2 {
-  font-size: 1em;
+  font-size: .8em;
 }
 .pie-chart cite {
   padding-bottom: .1em !important;
@@ -380,7 +380,7 @@ main {
   margin: 0 auto;
 }
 .page-content {
-  padding-top: 32px;
+  padding-top: 40px;
 }
 
 @media screen and (min-width: 480px) {
